feat: add tablet resposibility

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <a href="#">Esqueceu a senha?</a>
       </div>
-      <button type="button">Entrar na conta</button>
+      <button type="submit">Entrar na conta</button>
       <a href="#" class="social">
         <img src="./assets/google-login.svg" alt="Login com o Google">
         Ou faça login com o Google
