feat: adding desktop responsibility

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+  <div class="img-container">
+    <img src="./assets/logo.svg" alt="login plataform logo">
+  </div>
   <div id="container">
     <strong>Bem-vindo de volta</strong>
     <h1>Faça Login na sua conta</h1>
